# wgrp

./: .gitignore  .readthedocs.yaml  Example_of_use.ipynb  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: general-tests.yaml  python-publish.yml
data/: Offshore.csv  data_weibullplusplus.csv  windshield.csv
docs/: index.md
docs/api/: base_functions.md  compute.md  functions_wgrp_based.md  mle_wgrp.md  model.md  virtual_ages.md
mwgrp/: base_functions.py  compute.py  getcomputer.py  mle_wgrp.py  model.py  moments.py  virtual_ages.py  wgrp_functions.py
tests/: test_fit.py
wgrp/: base_functions.py  compute.py  getcomputer.py  mle_wgrp.py  model.py  moments.py  virtual_ages.py  wgrp_functions.py
